@@ -6,6 +6,7 @@
 		<name>pro-audio overlay team</name>
 	</maintainer>
 	<use>
+		<flag name="auto-arrange">Atto arrange support viy graphviz (2.34 not supported at that time)</flag>
 		<flag name="gir">Use gir</flag>
 		<flag name="session">Build Jack session support</flag>
 	</use>
