@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Dec 2013; Dominique Michel <dominique_libre@users.sourceforge.net>
+  drobilla-9999.ebuild: added auto-arrange USE flag for graphviz support
+  Note that graphviz broke the API between 2.28 and 2.34, so 2.34 is not supported
+  at that time.
+
   28 Mar 2013; Dominique Michel <dominique_libre@users.sourceforge.net>
   drobilla-9999.ebuild: added media-sound/machina-9999 in the dependencies
 
